<resources>
    <string name="app_name">Android Assignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_analytics">View Analytics</string>
    <string name="dashboard">Dashboard</string>
    <string name="top_links">Top Links</string>
    <string name="recent_links">Recent Links</string>
    <string name="view_all_links">View all Links</string>
    <string name="talk_with_us">Talk with us</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
</resources>