<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E6FFF"
    tools:context=".ui.FragmentLinks">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/dashboard"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:src="@drawable/setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_dashboard" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:background="@drawable/fragment_link_shape"
            android:backgroundTint="#F5F5F5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_setting">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_hello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawableEnd="@drawable/ic_greeting"
                android:drawablePadding="10dp"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_hello"
                app:layout_constraintTop_toBottomOf="@id/tv_hello" />

            <androidx.cardview.widget.CardView
                android:id="@+id/line_chart_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/tv_name">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvOverview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:fontFamily="@font/figtree_regular"
                            android:text="Overview"
                            android:textColor="@color/light_trucks_text"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tvDuration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/rectangular_grey_box_padding"
                            android:drawablePadding="8dp"
                            android:fontFamily="@font/figtree_regular"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            app:drawableEndCompat="@drawable/ic_clock"
                            tools:text="22 Aug - 23 Sep" />
                    </RelativeLayout>


                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/chart"
                        android:layout_width="match_parent"
                        android:layout_height="160dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_analytic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_chart_card_view" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/analytics_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/stroke_corner_shape"
                app:layout_constraintEnd_toEndOf="@id/rv_analytic"
                app:layout_constraintStart_toStartOf="@id/rv_analytic"
                app:layout_constraintTop_toBottomOf="@id/rv_analytic">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:drawableStart="@drawable/analytic"
                    android:drawablePadding="10dp"
                    android:text="@string/view_analytics"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggle_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:showDividers="middle"
                app:checkedButton="@id/btnTopLinks"
                app:layout_constraintStart_toStartOf="@id/rv_analytic"
                app:layout_constraintTop_toBottomOf="@id/analytics_layout"
                app:selectionRequired="true"
                app:singleSelection="true">

                <Button
                    android:id="@+id/btnTopLinks"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/figtree_semibold"
                    android:text="Top Links"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnRecentLinks"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/figtree_semibold"
                    android:text="Recent Links"
                    android:textAllCaps="false" />
            </com.google.android.material.button.MaterialButtonToggleGroup>


            <ImageView
                android:id="@+id/img_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/search"
                app:layout_constraintBottom_toBottomOf="@id/toggle_group"
                app:layout_constraintEnd_toEndOf="@id/analytics_layout"
                app:layout_constraintTop_toTopOf="@id/toggle_group" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_links"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="@id/img_search"
                app:layout_constraintStart_toStartOf="@id/toggle_group"
                app:layout_constraintTop_toBottomOf="@id/toggle_group" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/all_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/stroke_corner_shape"
                app:layout_constraintEnd_toEndOf="@id/rv_analytic"
                app:layout_constraintStart_toStartOf="@id/rv_analytic"
                app:layout_constraintTop_toBottomOf="@id/rv_links">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:drawableStart="@drawable/link"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/black"
                    android:text="@string/view_all_links"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/talk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/stroke_corner_shape"
                android:backgroundTint="#C6ECCC"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="@id/rv_analytic"
                app:layout_constraintStart_toStartOf="@id/rv_analytic"
                app:layout_constraintTop_toBottomOf="@id/all_link">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:drawableStart="@drawable/talk_us"
                    android:drawablePadding="10dp"
                    android:text="@string/talk_with_us"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ask_question"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/stroke_corner_shape"
                android:backgroundTint="#E8F1FF"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/rv_analytic"
                app:layout_constraintStart_toStartOf="@id/rv_analytic"
                app:layout_constraintTop_toBottomOf="@id/talk">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:drawableStart="@drawable/question_mark"
                    android:drawablePadding="10dp"
                    android:text="@string/frequently_asked_questions"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
